D8ISUTHEME-54 Fix header wrapping on IE 11

--- a/css/theme.css
+++ b/css/theme.css
@@ -63,7 +63,7 @@
   align-items: center;
 }
 .isu-col-header-first {
-  flex: 1 0 0;
+  flex: 1 1 0px;
   text-align: center;
 }
 .isu-col-header-second {
